--- a/WBooks/Base.lproj/Main.storyboard
+++ b/WBooks/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_5" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,17 +13,17 @@
             <objects>
                 <viewController title="Login" id="BYZ-38-t0r" customClass="ViewController" customModule="WBooks" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" customClass="UIImageView" customModule="WBooks">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="redraw" preservesSuperviewLayoutMargins="YES" image="Background" highlightedImage="Background" translatesAutoresizingMaskIntoConstraints="NO" id="P85-dp-Xn6">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="woj-9w-yGf">
-                                <rect key="frame" x="36" y="244" width="342" height="196"/>
+                                <rect key="frame" x="36" y="244" width="303" height="196"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="nEO-Zo-8MM">
-                                        <rect key="frame" x="0.0" y="0.0" width="342" height="52"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="303" height="52"/>
                                         <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="52" id="TzM-pN-g6q"/>
@@ -33,7 +33,7 @@
                                         <textInputTraits key="textInputTraits" textContentType="username"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="fNg-hd-AbN">
-                                        <rect key="frame" x="0.0" y="72" width="342" height="52"/>
+                                        <rect key="frame" x="0.0" y="72" width="303" height="52"/>
                                         <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="52" id="u1x-kA-2JQ"/>
@@ -43,7 +43,7 @@
                                         <textInputTraits key="textInputTraits" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCq-Vh-zQj">
-                                        <rect key="frame" x="0.0" y="144" width="342" height="52"/>
+                                        <rect key="frame" x="0.0" y="144" width="303" height="52"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="52" id="82g-Tg-G1r"/>
                                         </constraints>
@@ -112,26 +112,37 @@
             <objects>
                 <viewController id="qf8-p5-FcZ" customClass="LibraryTableViewController" customModule="WBooks" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cTM-8j-J5m">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="QZ8-Ur-9NQ">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="598"/>
+                                <color key="backgroundColor" red="0.94158953430000003" green="0.97607094049999998" blue="0.99608176950000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <inset key="separatorInset" minX="18" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <tabBar key="tableFooterView" contentMode="scaleToFill" id="5gc-Zl-0Tu">
+                                    <rect key="frame" x="0.0" y="178" width="375" height="49"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <items>
+                                        <tabBarItem title="Library" image="books.vertical" catalog="system" id="ksy-58-XME" userLabel="Library Button"/>
+                                        <tabBarItem title="Wishlist" image="star.leadinghalf.filled" catalog="system" id="CfY-Rv-7CR"/>
+                                        <tabBarItem title="Add New" image="plus.circle" catalog="system" id="Ish-aE-AFi"/>
+                                        <tabBarItem title="Rentals" image="checkmark.diamond" catalog="system" id="6aY-q4-jYt"/>
+                                    </items>
+                                </tabBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="LibraryTableViewCell" rowHeight="100" id="Z07-6h-Ji0" customClass="LibraryTableViewCell" customModule="WBooks" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="414" height="100"/>
+                                        <rect key="frame" x="0.0" y="50" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" tag="23" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z07-6h-Ji0" id="au6-p1-30Z">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MNq-11-aMe">
-                                                    <rect key="frame" x="8" y="8" width="398" height="84"/>
+                                                    <rect key="frame" x="8" y="8" width="359" height="84"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fcr-wd-3vB">
-                                                            <rect key="frame" x="85" y="20" width="305" height="27"/>
+                                                            <rect key="frame" x="85" y="20" width="266" height="27"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="27" id="zqF-Fs-7b4"/>
                                                             </constraints>
@@ -147,7 +158,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LB5-0c-THj">
-                                                            <rect key="frame" x="85" y="50" width="305" height="14"/>
+                                                            <rect key="frame" x="85" y="50" width="266" height="14"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                             <color key="textColor" systemColor="systemGrayColor"/>
                                                             <nil key="highlightedColor"/>
@@ -198,7 +209,16 @@
                             <constraint firstItem="sL6-d6-jbk" firstAttribute="bottom" secondItem="QZ8-Ur-9NQ" secondAttribute="bottom" id="pxe-LE-cLL"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="LIBRARY" largeTitleDisplayMode="always" id="DfN-hg-rPV"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="LIBRARY" largeTitleDisplayMode="always" id="DfN-hg-rPV">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="bell" catalog="system" id="sa4-rm-2Yv">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="Mmf-Gq-fkP">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="libraryTableView" destination="QZ8-Ur-9NQ" id="AcN-n9-ll5"/>
                     </connections>
@@ -207,16 +227,17 @@
             </objects>
             <point key="canvasLocation" x="2028.985507246377" y="-2.4456521739130435"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Navigation View Controller-->
         <scene sceneID="PqR-80-tWc">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BKV-qc-tGN" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="BKV-qc-tGN" customClass="NavigationViewController" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" userInteractionEnabled="NO" contentMode="scaleToFill" barStyle="blackTranslucent" id="fFa-fm-Hkl">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackTranslucent" id="fFa-fm-Hkl">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" red="0.30117672680000002" green="0.66876661780000002" blue="0.90983456370000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" red="0.29745262859999999" green="0.66472607849999998" blue="0.90983486179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="barTintColor" systemColor="tintColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -224,6 +245,12 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="95Y-fF-O7j" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="UAh-FB-7PT" customClass="CustomNavigationBar" customModule="WBooks" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="58"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <viewLayoutGuide key="safeArea" id="vtZ-Ka-NNj"/>
+                    <color key="backgroundColor" red="0.30117672680000002" green="0.66876661780000002" blue="0.90983456370000004" alpha="0.60281311439362584" colorSpace="custom" customColorSpace="displayP3"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="1153" y="-19"/>
         </scene>
@@ -231,7 +258,12 @@
     <resources>
         <image name="Background" width="375" height="667"/>
         <image name="Image" width="66" height="50"/>
+        <image name="bell" catalog="system" width="125" height="128"/>
+        <image name="books.vertical" catalog="system" width="128" height="107"/>
+        <image name="checkmark.diamond" catalog="system" width="128" height="124"/>
         <image name="defectImage" width="225" height="225"/>
+        <image name="plus.circle" catalog="system" width="128" height="123"/>
+        <image name="star.leadinghalf.filled" catalog="system" width="128" height="116"/>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -243,6 +275,9 @@
         </systemColor>
         <systemColor name="systemGrayColor">
             <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="tintColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
