--- a/WBooks/Login/LoginView.xib
+++ b/WBooks/Login/LoginView.xib
@@ -25,7 +25,7 @@
                     <rect key="frame" x="0.0" y="-12" width="379" height="687"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="redraw" preservesSuperviewLayoutMargins="YES" image="Background" highlightedImage="Background" translatesAutoresizingMaskIntoConstraints="NO" id="0Cf-6h-v1q">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="redraw" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Cf-6h-v1q">
                             <rect key="frame" x="0.0" y="0.0" width="379" height="687"/>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xLI-H5-779">
@@ -37,7 +37,6 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="52" id="8zb-Ql-Kdu"/>
                                     </constraints>
-                                    <color key="textColor" systemColor="systemGrayColor"/>
                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" textContentType="username"/>
                                 </textField>
@@ -47,7 +46,6 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="52" id="JL9-np-VfP"/>
                                     </constraints>
-                                    <color key="textColor" systemColor="systemGrayColor"/>
                                     <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                     <textInputTraits key="textInputTraits" textContentType="password"/>
                                 </textField>
@@ -56,7 +54,6 @@
                                     <constraints>
                                         <constraint firstAttribute="height" constant="52" id="LKg-Hp-Vsb"/>
                                     </constraints>
-                                    <color key="tintColor" systemColor="systemCyanColor"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" title="SIGN IN" buttonSize="medium" titleAlignment="center">
                                         <backgroundConfiguration key="background" cornerRadius="30">
@@ -70,7 +67,7 @@
                                 <constraint firstAttribute="height" constant="196" id="GbW-CP-xCj"/>
                             </constraints>
                         </stackView>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="3hX-oM-ebC">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="3hX-oM-ebC">
                             <rect key="frame" x="121" y="93" width="132" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="131.97" id="fIL-os-rMJ"/>
@@ -100,19 +97,11 @@
         </view>
     </objects>
     <resources>
-        <image name="Background" width="375" height="667"/>
-        <image name="Image" width="66" height="50"/>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.19607843137254902" green="0.67843137254901964" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGrayColor">
-            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
